pre-wrap notes field, resolves #238

--- a/src/scss/box.scss
+++ b/src/scss/box.scss
@@ -110,8 +110,8 @@
         overflow-x: auto;
     }
 
-    &.pre-line {
-        white-space: pre-line;
+    &.pre-wrap {
+        white-space: pre-wrap;
         overflow-x: auto;
     }
 
